[package]
name = "sortlock"
version = "0.2.0-a2"
edition = "2021"
license = "BSD-3-Clause"
description = "A crate providing ordered locking."
homepage = "https://crates.io/crates/sortlock"
repository = "https://github.com/WhyAreAllTheseTaken/sortlock"
documentation = "https://docs.rs/sortlock"
readme = "README.md"
keywords = ["concurrency"]
categories = ["concurrency"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-atomic = "1.7.0"
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex", "rwlock"] }

[features]
default = ["std"]
std = ["portable-atomic/std"]

